--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,10 @@
 <html>
     <head>
-        <script src="bundle.js" ></script>
+        
     </head>
-    <body></body>
+    <body>
+        
+        <p id="text"></p>
+        <script src="/public/assets/js/bundle.js" ></script>
+    </body>
 </html>
